// Test proto file for unwrap field option testing in OpenAPI generation
syntax = "proto3";

package test.openapiv3.unwrap;

option go_package = "github.com/SebastienMelki/sebuf/internal/openapiv3/testdata/generated;generated";

import "sebuf/http/annotations.proto";

// OptionBar represents a single option bar data point
message OptionBar {
  string symbol = 1;
  double price = 2;
  int64 volume = 3;
  string timestamp = 4;
}

// OptionBarsList is a wrapper message with an unwrap field
message OptionBarsList {
  // The bars field is marked for unwrapping
  repeated OptionBar bars = 1 [(sebuf.http.unwrap) = true];
}

// GetOptionBarsResponse contains a map of symbol to OptionBarsList
message GetOptionBarsResponse {
  // Map from symbol to option bars - should be rendered as additionalProperties: array of OptionBar
  map<string, OptionBarsList> bars = 1;
  string next_page_token = 2;
}

// GetOptionBarsRequest is the request message
message GetOptionBarsRequest {
  repeated string symbols = 1;
  string start_date = 2;
  string end_date = 3;
}

// UnwrapService tests unwrap in OpenAPI schema generation
service UnwrapService {
  option (sebuf.http.service_config) = {
    base_path: "/api/v1"
  };

  // GetOptionBars retrieves option bar data
  rpc GetOptionBars(GetOptionBarsRequest) returns (GetOptionBarsResponse) {
    option (sebuf.http.config) = {
      path: "/options/bars"
      method: HTTP_METHOD_POST
    };
  }

  // GetRootMap tests root-level map unwrap response
  rpc GetRootMap(GetOptionBarsRequest) returns (RootMapResponse) {
    option (sebuf.http.config) = {
      path: "/root/map"
      method: HTTP_METHOD_GET
    };
  }

  // GetRootRepeated tests root-level repeated unwrap response
  rpc GetRootRepeated(GetOptionBarsRequest) returns (RootRepeatedResponse) {
    option (sebuf.http.config) = {
      path: "/root/repeated"
      method: HTTP_METHOD_GET
    };
  }

  // GetRootMapWithValueUnwrap tests combined unwrap response
  rpc GetRootMapWithValueUnwrap(GetOptionBarsRequest) returns (RootMapWithValueUnwrapResponse) {
    option (sebuf.http.config) = {
      path: "/root/map-value-unwrap"
      method: HTTP_METHOD_GET
    };
  }
}

// =============================================================================
// Root-Level Unwrap Test Messages
// =============================================================================

// RootMapResponse tests root-level map unwrap with message values.
// OpenAPI: type=object with additionalProperties referencing OptionBar
message RootMapResponse {
  map<string, OptionBar> people = 1 [(sebuf.http.unwrap) = true];
}

// RootRepeatedResponse tests root-level repeated unwrap.
// OpenAPI: type=array with items referencing OptionBar
message RootRepeatedResponse {
  repeated OptionBar items = 1 [(sebuf.http.unwrap) = true];
}

// RootMapWithValueUnwrapResponse tests combined unwrap (root map + value unwrap).
// OpenAPI: type=object with additionalProperties being array of OptionBar
message RootMapWithValueUnwrapResponse {
  map<string, OptionBarsList> data = 1 [(sebuf.http.unwrap) = true];
}

// ScalarRootMapResponse tests root-level map unwrap with scalar values.
// OpenAPI: type=object with additionalProperties being integer
message ScalarRootMapResponse {
  map<string, int32> counts = 1 [(sebuf.http.unwrap) = true];
}

// ScalarRootRepeatedResponse tests root-level repeated unwrap with scalars.
// OpenAPI: type=array with items being string
message ScalarRootRepeatedResponse {
  repeated string names = 1 [(sebuf.http.unwrap) = true];
}
